Correção do swagger
